# Kumihan-Formatter

./: .claude-ai-integration.yml  .claude-behavioral-control.json  .claude-config.yml  .claude-mcp-efficiency.yml  .claude-system-override.yml  .claude_md_config.yaml  .claude_md_history.json  .cleanup.yml  .distignore  .flake8  .flake8_test  .gitignore  .markdownlint.json  .mcp.json  .pre-commit-config-test-protection.yaml  .pre-commit-config.yaml  .python-version  .tdd_session.json  .validation-config.yml  01_basic_features_fixed.txt  01_basic_features_safe.txt  10k_test_file.kumihan  1k_test_file.kumihan  20_technical_doc.txt  22_business_doc.txt  32_unicode_test.txt  50k_test_file.kumihan  AGENTS.md  API.md  API_GUIDELINES.md  ARCHITECTURE.md  BRANCH_CLEANUP.md  BRANCH_README.md  CHANGELOG.md  CI-CONSOLIDATION-1112.md  CI-FIX-1111.md  CI_CD_OPTIMIZATION_RECORD.md  CLAUDE.md  CLAUDE_OLD.md  CLAUDE_SERENA_README.md  (+145 more)
.claude/: README.md  hooks.json  mcp.json  serena-stats.json  settings.local.json
.github/: CODEOWNERS  PR_CHECKLIST.md  PULL_REQUEST_TEMPLATE.md  auto-merge-config.yml  claude-config.yml  claude-workflow.yml  pr_review_log.txt  pull_request_template.md
.improvement_plans/: current_plan.json
.quality_monitoring/: quality_trends.json  technical_debt.json
.serena/: project.yml
.tdd_logs/: tdd-640-20250728-232306_report.md
.tmp.driveupload/: 27589  27603  27621  27625  29767  29795  29813  29817  30473  33353  33373  33375  33377  33379  33381  33383  33385  33387  33389  33391
.venv312/: pyvenv.cfg
MAC/: サンプル実行.command  初回セットアップ.command  変換ツール.command  記法チェッカー.command
WINDOWS/: サンプル実行.bat  初回セットアップ.bat  変換ツール.bat  記法チェッカー.bat
archive/: benchmark_backup.py  fix_complex_nested.py  fix_complex_nested_v2.py  fix_complex_nested_v3.py  fix_final_2.py  fix_final_30.py  fix_final_complete.py  fix_final_remaining_83.py  fix_heavy_decoration.py  fix_heavy_decoration_v2.py  fix_heavy_decoration_v3.py  fix_performance_samples.py
assets/: create_icon.py  icon.icns
claude-setup-kit/: BEGINNER_GUIDE.md  INSTALLATION_GUIDE.md  README.md  TROUBLESHOOTING.md  project_config.yaml  setup.py
config/: ast_optimization.json  cross_platform_patterns.json  error_sanitization.json  statistical_parameters.json  tdd_security_config.yaml  unified_scanner.json
dev/: README.md  generate_test_patterns.bat  generate_test_patterns.command
docs/: API_SPECIFICATION.md  ARCHITECTURE.md  CLASS_DEPENDENCY_MAP.md  CLAUDE_SERENA_README.md  DEPLOYMENT.md  DEPRECATION_MIGRATION.md  DEVELOPMENT_GUIDE.md  EXCEPTION_POLICY.md  INDEX.md  LABEL_COLOR_GUIDE.md  OPERATIONS_GUIDE.md  PACKAGING.md  QUALITY_GATES.md  QUICKSTART.md  REFERENCE.md  SECURITY_TESTING.md  SERENA_USAGE.md  STRUCTURE.md  SYNTAX_REFERENCE.md  TDD_DEVELOPMENT_GUIDE.md  TESTING_GUIDELINES.md  USAGE_TUTORIAL.md  USER_GUIDE.md  ccusage_enhanced.md  claude_md_checklist.md  error-handling-guide.md  phase-3c-implementation.md  quickstart.txt  readme.txt  test-auto-merge.md  unified-config-system.md
examples/: 01-quickstart.txt  02-basic.txt  03-comprehensive.txt  04-image-embedding.txt  05-table-of-contents.txt  NOTATION_CHECKLIST.md  README.md  claude_code_logging_example.py  collapsible-test.txt  config-sample.json  config.yaml  enhanced-error-messages-demo.txt  error-demo.txt  error-test-cases.txt  highlight-color-test.txt  image_sample.txt  sample_content.kumi  sample_images.json  simple_image_test.txt  syntax-validation-test-cases.txt  toc_sample.txt
gemini_reports/: README.md  SAMPLE_ISSUE876_GEMINI_COLLABORATION.md  TEMPLATE.md  TEMPLATE_FORMAT.md  TEMPLATE_LINT.md  TEMPLATE_MYPY.md  TOKEN_COST_ANALYSIS.md  __init__.py  api_config.py  claude_gemini_orchestrator.py  code_analyzer.py  collaboration_history.json  config.json  data_processor.py  environment_validation.json  environment_validator.py  failure_patterns.json  failure_recovery_log.json  failure_recovery_system.py  gemini_api_executor.py  gemini_collaboration_checker.py  gemini_executor.py  generate_report.py  halstead.py  orchestration_log.json  quality_checker.py  quality_standards.py  quality_validation_history.json  recovery_statistics.json  report_generator.py  task_patterns.json  tech_debt_monitor.py  utils.py
kumihan_formatter/: __init__.py  __main__.py  block_handler.py  cli.py  cli_original.py  config.py  gui_components.py  gui_controller.py  gui_launcher.py  gui_launcher_backup.py  gui_main.py  gui_models.py  gui_pyqt6.py  gui_pyqt6_old.py  gui_views.py  gui_worker.py  inline_handler.py  markdown_converter.py  parallel_processor.py  parser.py  parser_old.py  parser_original.py  parser_utils.py  renderer.py  renderer_original.py  sample_content.py  simple_cli.py  simple_config.py  simple_parser.py  simple_renderer.py  streaming_parser.py  syntax_checker.py  unified_api.py
kumihan_sample/: showcase.txt
output/: sample_output.html  test_block_errors.txt  test_notation.html
postbox/: README.md
samples/: inline_notation_showcase.txt
scripts/: README.md  README_monitor.md  architecture_check.py  auto_split_files.sh  backward_compatibility_analyzer.py  build_alpha.py  build_macos.sh  check_file_size.py  check_gui_logs.py  ci_optimizer.py  circular_dependency_analyzer.py  claude_md_dashboard.py  claude_md_manager.py  claude_quality_gate.py  cleanup.py  cleanup_memory.sh  codex_env.example  complete_300k_test.py  create_dmg.sh  create_minimal_pr.sh  cross_platform_diagnostics.py  cross_platform_integration_test.py  demo_performance_optimization.py  dependency_audit.py  dependency_integrity_checker.py  discord-notify.sh  doc_validator.py  document_consistency_checker.py  emergency_bypass_tracker.py  enforce_tdd.py  enterprise_check.py  file-organizer.py  file_size_efficiency_analyzer.py  final_optimization_script.py  generate_300k_html.py  generate_html_sample.py  generate_large_sample.py  github_auth_validator.py  gradual_improvement_planner.py  inefficiency_impact_calculator.py  (+76 more)
test_output/: 02_intermediate_features_errors.txt  03_advanced_features_errors.txt  10_performance_1k_errors.txt  32_unicode_test_errors.txt  test_color_mixing_errors.txt  (+1 more)
(+2143 files in other folders)
