[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kumihan-formatter"
version = "0.9.0-alpha.8"
description = "CoC6th同人シナリオなどのテキストファイルをワンコマンドで配布可能なHTMLに自動組版するCLIツール"
authors = [{name = "mo9mo9-uwu-mo9mo9"}]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Proprietary"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0",
    "jinja2>=3.0",
    "rich>=13.0",
    "watchdog>=3.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "aiofiles>=23.0",
    "toml>=0.10",
    "tomli>=1.2.0",
]

[project.scripts]
kumihan = "kumihan_formatter.cli:main"

[project.optional-dependencies]
dev = [
    "black>=23.0",
    "mypy>=1.0",
    "types-psutil",
    "types-PyYAML",
    "types-aiofiles",
    "types-toml",
    "types-requests",
]
performance = [
    "psutil>=5.9",  # メモリ使用量追跡用
]
ai_optimization = [
    "lightgbm>=4.0.0",  # 高精度予測モデル
    "xgboost>=2.0.0",   # 補完的高精度学習
]
telemetry = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-jaeger-thrift>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
    "opentelemetry-instrumentation-logging>=0.41b0",
    "opentelemetry-instrumentation-psutil>=0.41b0",
    "opentelemetry-instrumentation-threading>=0.41b0",
    "opentelemetry-propagator-b3>=1.20.0",
    "prometheus_client>=0.18.0",
]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",       # カバレッジ測定
]

[tool.setuptools.packages.find]
exclude = ["dev*", "tools*"]

[tool.setuptools.package-data]
kumihan_formatter = [
    "templates/*.html.j2",
    "templates/*.css",
    "templates/*.js",
    "templates/partials/*",
    "assets/*",
    "config/*.py",
    "models/*.py"
]


[tool.black]
line-length = 88
target-version = ['py312']



# バージョン管理設定
[tool.bumpversion]
current_version = "0.3.0-alpha.1"
commit = true
tag = true
tag_name = "v{new_version}"
message = "release: bump version to {new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "kumihan_formatter/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

# mypy設定 - Issue #831: 品質管理基盤構築
[tool.mypy]

python_version = "3.12"

# 基本設定 - 54件エラー基準の実用的設定
strict = false  # strict全体無効化、個別設定で制御

# 現在有効化可能な厳密性設定
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = false
warn_unused_configs = true

# 段階的strict化のため一時無効化（後続Issue対応）
disallow_untyped_defs = true       # Issue #832対応完了 (no-untyped-def)
disallow_any_generics = false      # Issue #834対応予定 (type-arg)
disallow_untyped_calls = false     # Issue #833対応予定 (no-untyped-call)
disallow_any_unimported = false    # 外部ライブラリ対応

# 外部ライブラリ対応での現実的緩和
disallow_subclassing_any = false     # 外部ライブラリ継承許可
disallow_untyped_decorators = false  # デコレータ周りは緩和
disallow_incomplete_defs = false     # 部分的型アノテーション許可

# 現在のエラー解決のための追加設定
check_untyped_defs = true           # 型なし関数でもチェック実行

# 除外設定を拡張
exclude = [
    "dist/.*",
    "build/.*",
    ".*/.egg-info/.*",
    "serena/.*",
    "scripts/.*",
    "tests/.*_legacy.*",
    "tests/performance/.*",
    "dev/.*",
    "tmp/.*"
]

# 外部ライブラリの型チェック設定
[[tool.mypy.overrides]]
module = [
    "sklearn.*",
    "optuna.*",
    "joblib.*",
    "lightgbm.*",
    "xgboost.*",
    "tomli.*",
    "opentelemetry.*",
    "prometheus_client.*"
]
ignore_missing_imports = true

# pytest設定 - 個人開発最適化（シンプル版）
# テストカバレッジ段階的向上計画（Issue #1140）:
# Phase 1: 6% (現在基盤) → Phase 2: 10% → Phase 3: 20% → Phase 4: 30% (本格運用)
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "--cov=kumihan_formatter",
    "--cov-report=term-missing",
    "--cov-report=html:tmp/htmlcov",
    "--cov-fail-under=6",       # Issue #1140: 段階的向上計画（現在6.4% → 基盤6%）
    "-v",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
# Issue #1139: カスタムマーク定義（警告修正）
markers = [
    "integration: 統合テスト用マーク",
    "slow: 実行時間が長いテスト用マーク",
    "e2e: エンドツーエンドテスト用マーク",
    "unit: 単体テスト用マーク"
]

