[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kumihan-formatter"
version = "0.9.0-alpha.8"
description = "CoC6th同人シナリオなどのテキストファイルをワンコマンドで配布可能なHTMLに自動組版するCLIツール"
authors = [{name = "mo9mo9-uwu-mo9mo9"}]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Proprietary"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
# P1: runtime最小化（未使用依存を削除）
dependencies = [
]

[project.scripts]
kumihan = "kumihan_formatter.core.utilities.api_utils:main"

[project.optional-dependencies]
dev = [
    "black>=23.0",
    "mypy>=1.0",
    "types-psutil",
    "types-PyYAML",
    "types-aiofiles",
    "types-toml",
    "types-requests",
    "pyinstaller>=6.0.0",
]
performance = [
    "psutil>=5.9",  # メモリ使用量追跡用
]
cli = [
    "watchdog>=4.0",
    "rich>=13.0",
    "click>=8.0",
]
telemetry = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-jaeger-thrift>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
    "opentelemetry-instrumentation-logging>=0.41b0",
    # "opentelemetry-instrumentation-psutil>=0.41b0",  # パッケージが見つからないため一時コメントアウト
    "opentelemetry-instrumentation-threading>=0.41b0",
    "opentelemetry-propagator-b3>=1.20.0",
    "prometheus_client>=0.18.0",
]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",       # カバレッジ測定
]

[tool.setuptools.packages.find]
exclude = ["dev*", "tools*"]

[tool.setuptools.package-data]
kumihan_formatter = [
    "templates/*.html.j2",
    "templates/*.css",
    "templates/*.js",
    "templates/partials/*",
    "assets/*",
    "config/*.py",
    "models/*.py"
]


[tool.black]
line-length = 88
target-version = ['py312']

# バージョン管理設定
[tool.bumpversion]
current_version = "0.9.0-alpha.8"
commit = true
tag = true
tag_name = "v{new_version}"
message = "release: bump version to {new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "kumihan_formatter/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

# mypy設定 - Issue #831: 品質管理基盤構築
[tool.mypy]

python_version = "3.12"

# Issue #1247: mypy strict mode完全準拠設定
strict = true

# 厳密性設定（strict mode有効化）
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_any_unimported = true
warn_return_any = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_incomplete_defs = true
check_untyped_defs = true

# 除外設定（型注釈完了ファイルを除外から削除）
exclude = [
    "dist/.*",
    "build/.*",
    ".*/.egg-info/.*",
    "scripts/.*",
    "tests/.*_legacy.*",
    "tests/performance/.*",
    "dev/.*",
    "tmp/.*",
    "kumihan_formatter/unified_api_old.py",
    "kumihan_formatter/core/processing/processing_optimized.py"
]

# 外部ライブラリの型チェック設定
[[tool.mypy.overrides]]
module = [
    "sklearn.*",
    "optuna.*",
    "joblib.*",
    "lightgbm.*",
    "xgboost.*",
    "tomli.*",
    "opentelemetry.*",
    "prometheus_client.*",
    # P0: CLIオプション機能はオプショナル依存のため型を追跡しない
    "watchdog.*",
    "rich.*",
]
ignore_missing_imports = true

# P0: commands 配下は外部ツール依存により Any が発生するため、厳格設定を局所的に緩和
[[tool.mypy.overrides]]
module = [
    "kumihan_formatter.commands.convert_watcher",
]
disallow_subclassing_any = false
disallow_any_unimported = false

# pytest設定 - 個人開発最適化（シンプル版）
# テストカバレッジ段階的向上計画（Issue #1140）:
# Phase 1: 6% (現在基盤) → Phase 2: 10% → Phase 3: 20% → Phase 4: 30% (本格運用)
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "--cov=kumihan_formatter",
    "--cov-report=term-missing",
    "--cov-report=html:tmp/htmlcov",
    "--cov-fail-under=30",      # Coverage Phase 2: 30%（段階的に引き上げ）
    "-v",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
# Issue #1139: カスタムマーク定義（警告修正）
markers = [
    "integration: 統合テスト用マーク",
    "slow: 実行時間が長いテスト用マーク",
    "e2e: エンドツーエンドテスト用マーク",
    "unit: 単体テスト用マーク"
]
